# arabic-ocr

./: .gitignore  diagnose.py  pyproject.toml  requirements.txt  run.py
arabic_ocr/: __init__.py  config.py  pipeline.py
arabic_ocr/classifiers/: __init__.py  base.py  cnn_classifier.py  rf_classifier.py  svm_classifier.py
arabic_ocr/features/: __init__.py  contour_features.py  dot_features.py  grid_density.py  hog_features.py  normalize.py  zernike_moments.py
arabic_ocr/postprocess/: __init__.py  beam_search.py  dawg.py  language_model.py  reranker.py  viterbi.py
arabic_ocr/preprocess/: __init__.py  binarize.py  deskew.py  enhance.py  filter.py
arabic_ocr/segment/: __init__.py  chars.py  dots.py  lines.py  paws.py
arabic_ocr/utils/: __init__.py  arabic_utils.py  crop.py  image_io.py  visualize.py
models/: reranker.pkl
models/langmodel/: word_freq.json
tests/: test_classifier.py  test_features.py  test_pipeline.py  test_postprocess.py  test_preprocess.py  test_segment.py
tools/: _smoke_reranker.py  check_classifier_fallback.py  check_segment.py  check_sliver_merge.py  compare_outputs.py  debug_run.py  eval_reranker.py  eval_reranker_batch.py  inspect_ocr.py  inspect_pipeline_steps.py  inspect_postprocess.py  paw_diagnostics.py  run_manual_postprocess.py  save_flagged_paw.py  test_noon.py  test_paw_baseline.py  train_reranker.py  tune_lm.py  tune_rerank.py
train/: build_wordfreq.py  extract_features.py  generate_synthetic.py  train_cnn.py  train_langmodel.py  train_svm.py
