[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-ocr"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "Pillow>=10.0",
    "arabic-reshaper>=3.0",
    "python-bidi>=0.4.2",
]

[project.optional-dependencies]
cnn  = ["torch>=2.0"]
zernike = ["mahotas>=1.4"]

[project.scripts]
arabic-ocr = "arabic_ocr.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arabic_ocr*"]
